--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -8,6 +8,8 @@ jobs:
         os: [linux]
         frida_version: ["16.0.2"]
     runs-on: ubuntu-latest
+    env:
+      GODEBUG: cgocheck=2
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
