--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -1,13 +1,26 @@
 name: examples
-on: [push, pull_request]
+
+on:
+  pull_request:
+  push:
+    branches:
+      - "main"
+
 jobs:
-  linux:
+  examples:
     strategy:
+      fail-fast: false
       matrix:
-        arch: [x86_64]
-        os: [linux]
-        frida_version: ["16.0.13"]
-    runs-on: ubuntu-latest
+        include:
+          - runs_on: ubuntu-latest
+            arch: x86_64
+            os: linux
+            frida_version: "16.0.13"
+          - runs_on: macos-latest
+            arch: x86_64
+            os: macos
+            frida_version: "16.0.13"
+    runs-on: ${{ matrix.runs_on }}
     env:
       GODEBUG: cgocheck=2
     steps:
