--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,5 +1,11 @@
 name: linting
-on: [push, pull_request]
+
+on:
+  pull_request:
+  push:
+    branches:
+      - "main"
+
 jobs:
   staticcheck:
     strategy:
