--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -15,17 +15,19 @@ jobs:
           - runs_on: ubuntu-latest
             arch: x86_64
             os: linux
-            frida_version: "16.0.13"
+            frida_version: "16.3.3"
           - runs_on: macos-latest
             arch: x86_64
             os: macos
-            frida_version: "16.0.13"
+            frida_version: "16.3.3"
     runs-on: ${{ matrix.runs_on }}
     env:
-      GODEBUG: cgocheck=2
+      GOEXPERIMENT: cgocheck2
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '^1.22.x'
       - uses: ./.github/actions/install-frida-go-examples
       - uses: ./.github/actions/install-frida-devkit
         with:
